[workspace]
  resolver = "2"
  members = [
    "crates/*",
    "examples/*",
  ]

[workspace.package]
  authors     = ["Dominik Kaspar"]
  version     = "0.0.1"
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/bytestring-net/bevy-lunex"
  keywords    = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
  categories  = ["gui", "mathematics", "game-development"]

[workspace.dependencies]
  ahash              = { version = "^0.8" }
  colored            = { version = "^2.1" }
  indexmap           = { version = "^2.1" }

  bevy = { version = "0.12.1", default_features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",

    "dynamic_linking",
  ] }

  bevy_mod_picking   = { version = "0.17.0"}
  bevy_vector_shapes = { version = "0.6.0" }

  bevy_lunex         = { path = "crates/bevy_lunex" }

  lunex_core         = { path = "crates/lunex_core" }
  lunex_layout       = { path = "crates/lunex_layout" }
  lunex_nodemap      = { path = "crates/lunex_nodemap" }
  lunex_preset       = { path = "crates/lunex_preset" }
  lunex_theme        = { path = "crates/lunex_theme" }
  lunex_types        = { path = "crates/lunex_types" }
  lunex_typographic  = { path = "crates/lunex_typographic" }