[workspace]
  resolver = "2"
  members = [
    "crates/*",
  ]

[profile.dev]
  opt-level = 1

[workspace.package]
  authors     = ["Dominik Kaspar"]
  version     = "0.0.1"
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/bytestring-net/bevy-lunex"
  keywords    = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
  categories  = ["gui"]

[workspace.dependencies]
  ahash              = { version = "^0.8" }
  colored            = { version = "^2.1" }
  indexmap           = { version = "^2.1" }
  glam               = { version = "^0.25" }
  thiserror          = { version = "^1.0" }

  #bevy = { version = "0.12.1", default_features = false, features = [
  bevy = { git = "https://github.com/bevyengine/bevy", default_features = false, features = [
    #"bevy_gilrs",
    #"bevy_render",
    #"bevy_sprite",
    #"bevy_text",
    #"bevy_gizmos",
  ] }

  bevy_mod_picking   = { version = "0.17.0"}

  bevy_lunex         = { path = "crates/bevy_lunex" }
  lunex_engine       = { path = "crates/lunex_engine" }