[workspace]
  resolver = "2"
  members = [
    "crates/*",
  ]

[profile.dev]
  opt-level = 1

[workspace.package]
  authors     = ["Dominik Kaspar"]
  version     = "0.0.1"
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/bytestring-net/bevy-lunex"
  keywords    = ["ui", "layout", "bevy", "lunex", "bevy-lunex"]
  categories  = ["gui"]

[workspace.dependencies]
  ahash              = { version = "^0.8" }
  colored            = { version = "^2.1" }
  indexmap           = { version = "^2.1" }
  glam               = { version = "^0.27" }
  thiserror          = { version = "^1.0" }

  bevy = { version = "0.13.1", default_features = false, features = [] }

  lunex_engine       = { path = "crates/lunex_engine" }