[package]
  name = "bevy_lunex"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  ahash = { workspace = true }
  bevy  = { workspace = true }
  lunex = { workspace = true }
