[package]
  name = "lunex_core"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  bevy              = { workspace = true }
  lunex_layout      = { workspace = true }
  lunex_nodetree    = { workspace = true }
  lunex_preset      = { workspace = true }
  lunex_theme       = { workspace = true }
  lunex_types       = { workspace = true }
  lunex_typographic = { workspace = true }