[package]
  name = "lunex_core"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  colored           = { workspace = true }
  bevy              = { workspace = true }
  lunex_engine      = { workspace = true }
  lunex_theme       = { workspace = true }