[package]
  name = "lunex_layout"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  colored     = { workspace = true }
  bevy        = { workspace = true }
  lunex_types = { workspace = true }
