[package]
  name = "lunex_layout"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  colored     = { workspace = true }
  glam        = { workspace = true }
  bevy        = { workspace = true, optional = true }

[features]
  bevy  = ["dep:bevy"]