[package]
  name = "lunex_nodemap"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  indexmap = { workspace = true }
  colored  = { workspace = true }
  bevy     = { workspace = true }
