[package]
  name = "usage_3d"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  bevy = { workspace = true }
  lunex_core = { path = "../../crates/lunex_core" }
