[package]
  name = "usage_3d"
  authors.workspace    = true
  version.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true
  keywords.workspace   = true
  categories.workspace = true

[dependencies]
  indexmap     = { workspace = true }
  bevy         = { workspace = true }
  lunex_core   = { workspace = true }
  lunex_layout = { workspace = true }
